// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TutorialItem should ignore a label link and children when the item is completed 1`] = `
<div
  className="Item completed"
>
  <Check
    className="Completed"
    size={24}
  />
  <div
    className="Content"
  >
    <h6
      className="Label"
    >
      my item
    </h6>
  </div>
</div>
`;

exports[`Component: TutorialItem should render correctly by default 1`] = `
<div
  className="Item"
>
  <div
    className="Content"
  >
    <h6
      className="Label"
    >
      my item
    </h6>
    <div
      className="HelpText"
    >
      Evie
      Levon
    </div>
  </div>
</div>
`;

exports[`Component: TutorialItem should render the link and children when not completed 1`] = `
<div
  className="Item"
>
  <div
    className="Content"
  >
    <h6
      className="Label link"
    >
      <Link
        replace={false}
        to="/go/to/here"
      >
        my item
         
        <ArrowForward />
      </Link>
    </h6>
    <div
      className="HelpText"
    >
      Evie
      Levon
    </div>
  </div>
</div>
`;

exports[`Component: TutorialItem should show checkmark when task is completed 1`] = `
<div
  className="Item completed"
>
  <Check
    className="Completed"
    size={24}
  />
  <div
    className="Content"
  >
    <h6
      className="Label"
    >
      my item
    </h6>
  </div>
</div>
`;
